--- a/CocktailMagician/CocktailMagician/Views/_ViewImports.cshtml
+++ b/CocktailMagician/CocktailMagician/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using CocktailMagician
 @using CocktailMagician.Models
+@using CocktailMagician.Web.Models 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
