--- a/CocktailMagician/CocktailMagician/Views/Bars/Index.cshtml
+++ b/CocktailMagician/CocktailMagician/Views/Bars/Index.cshtml
@@ -4,49 +4,68 @@
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
 
-    
+
 }
 
-<h1>Index</h1>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Name)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Info)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Address)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-           // var photoPath = "~/Images/" +(item.PhotoPath ?? "noimage.jpg");
-           // <img class="card-img" src="@photoPath" />
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Info)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Address)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
+<h1>Bars</h1>
+
+@foreach (var bar in Model)
+{
+    <div class="col-sm-5 col-lg-5 col-md-5">
+        <div class="thumbnail">
+            <img src="/images/@bar.PhotoPath" alt="" width="320" height="200">
+            <div class="caption">
+                <h3>
+                    <a asp-controller="Bars" asp-action="Details" asp-route-id="@bar.Id">@bar.Name</a>
+                </h3>
+                <p>@bar.Address</p>
+
+            </div>
+        </div>
+    </div>
 }
-    </tbody>
-</table>
+
+@*<h1>Index</h1>*@
+
+@*<p>
+        <a asp-action="Create">Create New</a>
+    </p>
+    <table class="table">
+        <thead>
+            <tr>
+                <th>
+                    @Html.DisplayNameFor(model => model.Name)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Info)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Address)
+                </th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>*@
+@*@foreach (var item in Model) {
+               // var photoPath = "~/Images/" +(item.PhotoPath ?? "noimage.jpg");
+               // <img class="card-img" src="@photoPath" />
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Name)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Info)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Address)
+                </td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                    <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                </td>
+            </tr>
+    }
+        </tbody>
+    </table>*@
