--- a/CocktailMagician/CocktailMagician/Views/_ViewImports.cshtml
+++ b/CocktailMagician/CocktailMagician/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using CocktailMagician
 @using CocktailMagician.Models
-@using CocktailMagician.Web.Models 
+@using CocktailMagician.Web.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper "*, cloudscribe.Web.Pagination"
