--- a/CocktailMagician/CocktailMagician/Views/Bars/Index.cshtml
+++ b/CocktailMagician/CocktailMagician/Views/Bars/Index.cshtml
@@ -12,7 +12,7 @@
 
 @foreach (var bar in Model)
 {
-    <div class="col-sm-4 col-lg-4 col-md-4">
+    <div class="col-md-4">
         <div class="thumbnail">
             <img src="/images/@bar.PhotoPath" alt="" width="320" height="200">
             <div class="caption">
