--- a/CocktailMagician/CocktailMagician/Views/Bars/Index.cshtml
+++ b/CocktailMagician/CocktailMagician/Views/Bars/Index.cshtml
@@ -1,5 +1,4 @@
-﻿@model IEnumerable<CocktailMagician.Web.Models.BarViewModel>
-
+﻿@model cloudscribe.Pagination.Models.PagedResult<BarViewModel>
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -9,22 +8,42 @@
 
 
 <h1>Bars</h1>
+<form asp-action="Index" method="get">
+    <div>
+        <p>
+            <input type="text" name="searchString" value="" />
+            <input type="submit" value="Search" class="btn btn-info" /> |
+            <a asp-action="Index">Remove Filter</a>
 
-@foreach (var bar in Model)
-{
-    <div class="col-md-4">
-        <div class="thumbnail">
-            <img src="/images/@bar.PhotoPath" alt="" width="320" height="200">
-            <div class="caption">
-                <h3>
-                    <a asp-controller="Bars" asp-action="Details" asp-route-id="@bar.Id">@bar.Name</a>
-                </h3>
-                <p>@bar.Address</p>
+        </p>
+    </div>
+</form>
+<div class="row">
+    @foreach (var bar in Model.Data)
+    {
+        <div class="col-sm-3 col-lg-3 col-md-3">
+            <div class="thumbnail">
+                <img src="/images/@bar.PhotoPath" alt="" width="200" height="320">
+                <div class="caption">
+                    <h3>
+                        <a asp-controller="Bars" asp-action="Details" asp-route-id="@bar.Id">@bar.Name</a>
+                    </h3>
+                    <p>@bar.Address</p>
 
+                </div>
             </div>
         </div>
-    </div>
-}
+    }
+</div>
+<div class="row">
+    <cs-pager cs-paging-pagenumber="Model.PageNumber"
+              cs-paging-totalitems="Model.TotalItems"
+              cs-paging-pagesize="Model.PageSize"
+              cs-pagenumber-param="pageNumber"
+              asp-controller="Bars"
+              asp-action="Index">
+    </cs-pager>
+</div>
 
 @*<h1>Index</h1>*@
 
