--- a/CocktailMagician/CocktailMagician/Views/Cocktails/List.cshtml
+++ b/CocktailMagician/CocktailMagician/Views/Cocktails/List.cshtml
@@ -9,22 +9,32 @@
 }
 
 <h1>Cocktails</h1>
+<form asp-action="List" method="get">
+    <div>
+        <p>
+            <input type="text" name="searchString" value="" />
+            <input type="submit" value="Search" class="btn btn-info" /> |
+            <a asp-action="List">Remove Filter</a>
 
-@foreach (var cocktail in Model.Data)
-{
-    <div class="col-sm-4 col-lg-4 col-md-4">
-        <div class="thumbnail">
-            <img src="@cocktail.ImageUrl" alt="" width="200" height="320">
-            <div class="caption">
-                <h3>
-                    <a asp-controller="Cocktails" asp-action="Details" asp-route-id="@cocktail.Id">@cocktail.Name</a>
-                </h3>
-                <p>@cocktail.ShortDescription</p>
+        </p>
+    </div>
+</form>
+<div class="row">
+    @foreach (var cocktail in Model.Data)
+    {<div class="col-sm-3 col-lg-3 col-md-3">
+            <div class="thumbnail">
+                <img src="@cocktail.ImageUrl" alt="" width="200" height="320">
+                <div class="caption">
+                    <h3>
+                        <a asp-controller="Cocktails" asp-action="Details" asp-route-id="@cocktail.Id">@cocktail.Name</a>
+                    </h3>
+                    <p>@cocktail.ShortDescription</p>
+                </div>
             </div>
         </div>
-    </div>
-}
-<div>
+    }
+</div>
+<div class="row">
     <cs-pager cs-paging-pagenumber="Model.PageNumber"
               cs-paging-totalitems="Model.TotalItems"
               cs-paging-pagesize="Model.PageSize"
