searching cocktails added

--- a/CocktailMagician/CocktailMagician/Views/Cocktails/List.cshtml
+++ b/CocktailMagician/CocktailMagician/Views/Cocktails/List.cshtml
@@ -9,7 +9,7 @@
 }
 
 <h1>Cocktails</h1>
-<form asp-action="List" method="get">
+<form asp-action="Search" method="get">
     <div>
         <p>
             <input type="text" name="searchString" value="" />
