searching for bars and peginationPartial added

--- a/CocktailMagician/CocktailMagician/Views/Bars/Index.cshtml
+++ b/CocktailMagician/CocktailMagician/Views/Bars/Index.cshtml
@@ -1,6 +1,8 @@
 ﻿@model cloudscribe.Pagination.Models.PagedResult<BarViewModel>
 @{
     ViewData["Title"] = "Index";
+    ViewData["Controller"] = "Bars";
+    ViewData["Action"] = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
 
 
@@ -8,7 +10,7 @@
 
 
 <h1>Bars</h1>
-<form asp-action="Index" method="get">
+<form asp-action="Search" method="get">
     <div>
         <p>
             <input type="text" name="searchString" value="" />
@@ -35,15 +37,7 @@
         </div>
     }
 </div>
-<div class="row">
-    <cs-pager cs-paging-pagenumber="Model.PageNumber"
-              cs-paging-totalitems="Model.TotalItems"
-              cs-paging-pagesize="Model.PageSize"
-              cs-pagenumber-param="pageNumber"
-              asp-controller="Bars"
-              asp-action="Index">
-    </cs-pager>
-</div>
+<partial name="_PeginationPartial" view-data="ViewData" model="Model" />
 
 @*<h1>Index</h1>*@
 
