--- a/CocktailMagician/CocktailMagician/Views/Bars/Details.cshtml
+++ b/CocktailMagician/CocktailMagician/Views/Bars/Details.cshtml
@@ -6,36 +6,30 @@
     var photoPath = "/images/" + (Model.PhotoPath ?? "noimage.jpg");
     var star = "/images/star.png";
 }
-
-
-<h1>Details</h1>
-
-
 <div>
-    <h4>Bar</h4>
-    <hr />
+    <h1>@Model.Name</h1>
     <img class="card-img-top" src="@photoPath" />
     <dl class="row">
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Name)
+            @Html.DisplayNameFor(model => model.Name):
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Name)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Info)
+            @Html.DisplayNameFor(model => model.Info):
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Info)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Address)
+            @Html.DisplayNameFor(model => model.Address):
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Address)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.AverageRating)
+            @Html.DisplayNameFor(model => model.AverageRating):
         </dt>
         <dd class="col-sm-10">
              @for (int i = 0; i < Model.AverageRating; i++)
@@ -46,6 +40,7 @@
     </dl>
 </div>
 <div class="form-group">
+    <h3>Leave a Comment        <span>&#9759;</span></h3>
     @if (!(User.Identity.IsAuthenticated))
     {
         <h4 class="card-title"><a asp-area="Identity" asp-page="/Account/Login">Login</a> or <a asp-area="Identity" asp-page="/Account/Login">register</a> to add comments and rate</h4>
@@ -119,6 +114,6 @@
 
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
+    @*<a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |*@
     <a asp-action="Index">Back to List</a>
 </div>
