--- a/CocktailMagician/CocktailMagician/Views/Cocktails/List.cshtml
+++ b/CocktailMagician/CocktailMagician/Views/Cocktails/List.cshtml
@@ -3,6 +3,8 @@
 
 @{
     ViewData["Title"] = "Index";
+    ViewData["Controller"] = "Cocktails";
+    ViewData["Action"] = "List";
     Layout = "~/Views/Shared/_Layout.cshtml";
 
 
@@ -34,12 +36,4 @@
         </div>
     }
 </div>
-<div class="row">
-    <cs-pager cs-paging-pagenumber="Model.PageNumber"
-              cs-paging-totalitems="Model.TotalItems"
-              cs-paging-pagesize="Model.PageSize"
-              cs-pagenumber-param="pageNumber"
-              asp-controller="Cocktails"
-              asp-action="List">
-    </cs-pager>
-</div>
+<partial name="_PeginationPartial" view-data="ViewData" model="Model" />
