--- a/CocktailMagician/CocktailMagician/Views/Cocktails/Search.cshtml
+++ b/CocktailMagician/CocktailMagician/Views/Cocktails/Search.cshtml
@@ -1,5 +1,8 @@
 ﻿@model cloudscribe.Pagination.Models.PagedResult<CocktailViewModel>
-
+@{ 
+    ViewData["Controller"] = "Cocktails";
+    ViewData["Action"] = "Search";
+}
 
 
 
@@ -26,12 +29,4 @@
         }
     </table>
 </div>
-<div class="row">
-    <cs-pager cs-paging-pagenumber="Model.PageNumber"
-              cs-paging-totalitems="Model.TotalItems"
-              cs-paging-pagesize="Model.PageSize"
-              cs-pagenumber-param="pageNumber"
-              asp-controller="Cocktails"
-              asp-action="Search">
-    </cs-pager>
-</div>
+<partial name="_PeginationPartial" view-data="ViewData" model="Model"/>
