--- a/CocktailMagician/CocktailMagician/Views/Shared/_Layout.cshtml
+++ b/CocktailMagician/CocktailMagician/Views/Shared/_Layout.cshtml
@@ -32,9 +32,9 @@
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <partial name="_LoginPartial" />
                     <ul class="nav navbar-nav">
-                        <li><a asp-controller="Home" asp-action="Index">Home</a></li>
-                        <li><a asp-controller="Bars" asp-action="Index">Bars</a></li>
-                        <li><a asp-controller="Cocktails" asp-action="List">Cocktails</a></li>
+                        <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
+                        <li><a asp-area="" asp-controller="Bars" asp-action="Index">Bars</a></li>
+                        <li><a asp-area="" asp-controller="Cocktails" asp-action="List">Cocktails</a></li>
                     </ul>
                 </div>
             </div>
