--- a/CocktailMagician/CocktailMagician/Views/Bars/Details.cshtml
+++ b/CocktailMagician/CocktailMagician/Views/Bars/Details.cshtml
@@ -7,44 +7,89 @@
     var star = "/images/star.png";
 }
 
+<head>
+    <style>     
+        .picture {
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+            height: 500px;
+            width: 800px;
+            border-radius: 8px;
+        }
+        .title {
+            font-size:45px;
+            text-align: left;
+            text-decoration: underline;
+            text-indent: 20px;
+            line-height: 1;
+            font-family: Impact, Charcoal, sans-serif;
+        }
+        .averageRating{
+            text-align:left;
+            text-indent:20px;
+            word-spacing:10px;
+        }
+        .about {
+            font-size:30px;
+            font-family: Impact, Charcoal, sans-serif;
+        }
+        .info{
+            font-size:15px;
+            font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+        }
+        .warning {
+            font-size: 25px;
+            font-family: Impact, Charcoal, sans-serif;
+        }
 
-<h1>Details</h1>
+        .table, th, td {
+            font-size: 18px;
+            border-top: 2px solid black;
+        }
+        th{
+            text-align:center;
+            font-size:20px;
 
+        }
+        td {
+            text-indent: 5px;
+            border-bottom: 2px solid black;
+           
+        }
+        .comment{
+            font-size:25px;
+            
+            text-align:center;
+        }
 
+    </style>
+</head> 
+
+    <h2 class="title">@Model.Name</h2>
+    <p class="averageRating">
+        @for (int i = 0; i < Model.AverageRating; i++)
+        {
+            <img src="@star" width="25" alt="rating" />
+        }
+    </p>
+<img class="picture" alt="@Model.Name" src="@photoPath" width="300" height="200">
 <div>
-    <h4>Bar</h4>
-    <hr />
-    <img class="card-img-top" src="@photoPath" />
-    <dl class="row">
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Name)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Info)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Info)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Address)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Address)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.AverageRating)
-        </dt>
-        <dd class="col-sm-10">
-             @for (int i = 0; i < Model.AverageRating; i++)
-             {
-            <img src="@star" width="30" alt="rating"/>
-             }
-        </dd>
-    </dl>
+    <div class="caption-full">
+        <h3 class="about">About <span>&#9759;</span></h3>
+        <p class="info">@Model.Info</p>
+
+
+        @*<h3>Avaiable Cocktails:</h3>
+            @foreach (var item in Model.Cocktails)
+            {
+
+                <h4> <span>&#9728;</span> @item</h4>
+            }*@
+    </div>
 </div>
+
+<h3 class="warning">Leave a Comment</h3>
 <div class="form-group">
     @if (!(User.Identity.IsAuthenticated))
     {
@@ -59,10 +104,10 @@
             <input type="hidden" asp-for="@Model.Id" value="@Model.Id" />
 
             <input class=" form-control" id="CurrentComment" name="CurrentComment" type="text" placeholder="Write your Comment here" />
-            <input asp-controller="Bars" asp-action="AddComment" type="submit" value="Submit" />
+            <input asp-area="Member" asp-controller="BarComment" asp-action="AddComment" type="submit" value="Submit" />
 
         }
-        <form asp-controller="Bars" asp-action="AddRating">
+        <form asp-area="Member" asp-controller="BarRating" asp-action="AddRating">
             <fieldset class="rating">
                 <input type="hidden" asp-for="@Model.Id" value="@Model.Id" />
                 <link href="~/css/star.css" rel="stylesheet" type="text/css" />
@@ -80,6 +125,7 @@
         </form>
     }
 </div>
+<br />
 <div>
     @if (Model.Comments.Count == 0 || Model.Comments == null)
     {
@@ -88,9 +134,9 @@
     }
     else
     {
-        <h4>Reviews:</h4>
+        <h4>Comments:</h4>
         <table class="table">
-            <thead>
+            @*<thead>
                 <tr>
                     <th>
                         User Name
@@ -99,18 +145,20 @@
                         Comment
                     </th>
                 </tr>
-            </thead>
+            </thead>*@
             <tbody>
                 @foreach (var item in Model.Comments)
                 {
                     <tr>
 
                         <td>
-                            @item.Author
+                            @item.Author <br />
+                            @item.CreatedOn.ToString("dd MM yyyy HH:mm")
                         </td>
-                        <td>
-                            @item.Text
+                        <td class="comment">
+                            @item.Text                           
                         </td>
+                        
                     </tr>
                 }
             </tbody>
@@ -118,7 +166,10 @@
     }
 
 </div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
-</div>
+@if (User.IsInRole("cocktail magician"))
+{
+    <div>
+        <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-danger">Edit</a> 
+    </div>
+}
+        <a asp-action="Index" class="btn btn-warning">Back to List</a>
