--- a/CocktailMagician/CocktailMagician/Views/Bars/Index.cshtml
+++ b/CocktailMagician/CocktailMagician/Views/Bars/Index.cshtml
@@ -2,12 +2,29 @@
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
-
-
 }
+<head>
+    <style>
+        .image {
+            padding: 5px;
+            border: 1px solid #ddd;
+        }
+
+            .image:hover {
+                box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
+            }
+    </style>
+</head>
 
 
 <h1>Bars</h1>
+@if (User.IsInRole("cocktail magician"))
+{
+    <p>
+        <a asp-action="Create" class="btn btn-warning">Create New</a>
+    </p>
+}
+
 <form asp-action="Index" method="get">
     <div>
         <p>
@@ -23,7 +40,7 @@
     {
         <div class="col-sm-3 col-lg-3 col-md-3">
             <div class="thumbnail">
-                <img src="/images/@bar.PhotoPath" alt="" width="200" height="320">
+                <img class="image" src="/images/@bar.PhotoPath" alt="" />
                 <div class="caption">
                     <h3>
                         <a asp-controller="Bars" asp-action="Details" asp-route-id="@bar.Id">@bar.Name</a>
@@ -45,46 +62,3 @@
     </cs-pager>
 </div>
 
-@*<h1>Index</h1>*@
-
-@*<p>
-        <a asp-action="Create">Create New</a>
-    </p>
-    <table class="table">
-        <thead>
-            <tr>
-                <th>
-                    @Html.DisplayNameFor(model => model.Name)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Info)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Address)
-                </th>
-                <th></th>
-            </tr>
-        </thead>
-        <tbody>*@
-@*@foreach (var item in Model) {
-               // var photoPath = "~/Images/" +(item.PhotoPath ?? "noimage.jpg");
-               // <img class="card-img" src="@photoPath" />
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Name)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Info)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Address)
-                </td>
-                <td>
-                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                    <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-                </td>
-            </tr>
-    }
-        </tbody>
-    </table>*@
